--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>my-first-repo</title>
 </head>
 <body>
-    
+      
 </body>
 </html>
+<img src = "abcd (1).jpg" alt ="">
+<img src = "abcd (2).jpg" alt ="">
+<img src = "abcd (3).jpg">
